--- a/src/components/ImageProcessor.css
+++ b/src/components/ImageProcessor.css
@@ -31,7 +31,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    mix-blend-mode: multiply;
+    mix-blend-mode: hard-light;
     opacity: 0.7;
   }
   
