--- a/src/components/ImageProcessor.css
+++ b/src/components/ImageProcessor.css
@@ -35,3 +35,14 @@
     opacity: 0.7;
   }
   
+  .blurred-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    filter: blur(8px) grayscale(1);
+    clip-path: polygon(0 0, 38% 0, 38% 24%, 34% 39%, 43% 62%, 61% 100%, 0% 100%);
+  }
+  
