--- a/src/components/ImageProcessor.css
+++ b/src/components/ImageProcessor.css
@@ -16,7 +16,8 @@
   
   .image-container {
     position: relative;
-    display: inline-block;
+    display: flex;
+    filter: contrast(1.5);
   }
   
   .uploaded-image {
@@ -42,7 +43,7 @@
     width: 100%;
     height: 100%;
     background-size: cover;
-    filter: blur(8px) grayscale(1);
+    filter: blur(3px) grayscale(1);
     clip-path: polygon(0 0, 38% 0, 38% 24%, 34% 39%, 43% 62%, 61% 100%, 0% 100%);
   }
   
