--- a/src/components/ImageProcessor.css
+++ b/src/components/ImageProcessor.css
@@ -1,11 +1,15 @@
+#root {
+  padding: 20px;
+  height: calc(100vh - 40px);
+  background-color: #fcfcfc;
+  background: radial-gradient(circle, transparent 20%, #fcfcfc 20%, #fcfcfc 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, #fcfcfc 20%, #fcfcfc 80%, transparent 80%, transparent) 17.5px 17.5px, linear-gradient(#252525 1.4000000000000001px, transparent 1.4000000000000001px) 0 -0.7000000000000001px, linear-gradient(90deg, #252525 1.4000000000000001px, #fcfcfc 1.4000000000000001px) -0.7000000000000001px 0;
+  background-size: 35px 35px, 35px 35px, 17.5px 17.5px, 17.5px 17.5px;
+}
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
-    background-color: #f4f4f4;
-    min-height: 100vh;
-
   }
   
   .upload-btn {
@@ -68,17 +72,7 @@
     background-color: #555;
   }
 
-  /* Light Mode */
-body {
-  background-color: #ffffff;
-  color: #000000;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-.container.light {
-  background-color: #f5f5f5;
-  color: #333;
-}
+/* Light Mode */
 
 /* Dark Mode */
 body.dark-mode {
@@ -86,9 +80,10 @@ body.dark-mode {
   color: #ffffff;
 }
 
-.container.dark {
-  background-color: #2c2c2c;
-  color: #ffffff;
+.dark-mode #root {
+  background-color: #252525;
+  background: radial-gradient(circle, transparent 20%, #252525 20%, #252525 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, #252525 20%, #252525 80%, transparent 80%, transparent) 17.5px 17.5px, linear-gradient(#fcfcfc 1.4000000000000001px, transparent 1.4000000000000001px) 0 -0.7000000000000001px, linear-gradient(90deg, #fcfcfc 1.4000000000000001px, #252525 1.4000000000000001px) -0.7000000000000001px 0;
+  background-size: 35px 35px, 35px 35px, 17.5px 17.5px, 17.5px 17.5px;
 }
 
 /* Button Styling */
